--- a/plugin/tigergraph/fuzzymatch/examples/entity-resolution/jupyter-demo/TG_demo.ipynb
+++ b/plugin/tigergraph/fuzzymatch/examples/entity-resolution/jupyter-demo/TG_demo.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
       "Kick off job job_schema_change_local\n",
       "\n",
       "Graph xgraph_tigergraph update to new version 1\n",
-      "The job job_schema_change_local completes in 7.571 seconds!\n",
+      "The job job_schema_change_local completes in 8.796 seconds!\n",
       "The job job_schema_change_local is dropped!\n"
      ]
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -234,12 +234,12 @@
       "[Tip: Use \"CTRL + C\" to stop displaying the loading status update, then use \"SHOW LOADING STATUS jobid\" to track the loading progress again]\n",
       "[Tip: Manage loading jobs with \"ABORT/RESUME LOADING JOB jobid\"]\n",
       "Starting the following job, i.e.\n",
-      "JobName: load_job, jobid: xgraph_tigergraph.load_job.file.m1.1644361813096\n",
-      "Loading log: '/home2/tigergraph/tigergraph/log/restpp/restpp_loader_logs/xgraph_tigergraph/xgraph_tigergraph.load_job.file.m1.1644361813096.log'\n",
+      "JobName: load_job, jobid: xgraph_tigergraph.load_job.file.m1.1644967108827\n",
+      "Loading log: '/home2/tigergraph/tigergraph/log/restpp/restpp_loader_logs/xgraph_tigergraph/xgraph_tigergraph.load_job.file.m1.1644967108827.log'\n",
       "\n",
-      "Job \"xgraph_tigergraph.load_job.file.m1.1644361813096\" loading status\n",
-      "[WAITING] m1 ( Finished: 0 / Total: 0 )\n",
-      "Job \"xgraph_tigergraph.load_job.file.m1.1644361813096\" loading status\n",
+      "Job \"xgraph_tigergraph.load_job.file.m1.1644967108827\" loading status\n",
+      "[RUNNING] m1 ( Finished: 0 / Total: 2 )\n",
+      "Job \"xgraph_tigergraph.load_job.file.m1.1644967108827\" loading status\n",
       "[FINISHED] m1 ( Finished: 2 / Total: 2 )\n",
       "[LOADED]\n",
       "+-------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
       "--------- Installing Queries ----------\n",
       "installing base queries ...\n",
       "Using graph 'xgraph_tigergraph'\n",
-      "Query insert_dummy_nodes could not be found.\n",
+      "The query insert_dummy_nodes is dropped.\n",
       "The query insert_dummy_nodes has been added!\n",
       "Start installing queries, about 1 minute ...\n",
       "insert_dummy_nodes query: curl -X GET 'http://127.0.0.1:9000/query/xgraph_tigergraph/insert_dummy_nodes?numNodes=VALUE'. Add -H \"Authorization: Bearer TOKEN\" if authentication is enabled.\n",
@@ -295,16 +295,19 @@
       "\n",
       "installing entity resolution queries ...\n",
       "Using graph 'xgraph_tigergraph'\n",
-      "Query entity_resolution_tg could not be found.\n",
-      "Query entity_resolution_alveo could not be found.\n",
-      "Query entity_resolution_cpu could not be found.\n",
+      "The query entity_resolution_tg is dropped.\n",
+      "The query entity_resolution_alveo is dropped.\n",
+      "The query entity_resolution_retres_alveo is dropped.\n",
+      "The query entity_resolution_cpu is dropped.\n",
       "The query entity_resolution_tg has been added!\n",
       "The query entity_resolution_cpu has been added!\n",
       "The query entity_resolution_alveo has been added!\n",
+      "The query entity_resolution_retres_alveo has been added!\n",
       "Start installing queries, about 1 minute ...\n",
       "entity_resolution_tg query: curl -X GET 'http://127.0.0.1:9000/query/xgraph_tigergraph/entity_resolution_tg'. Add -H \"Authorization: Bearer TOKEN\" if authentication is enabled.\n",
       "entity_resolution_alveo query: curl -X GET 'http://127.0.0.1:9000/query/xgraph_tigergraph/entity_resolution_alveo'. Add -H \"Authorization: Bearer TOKEN\" if authentication is enabled.\n",
       "entity_resolution_cpu query: curl -X GET 'http://127.0.0.1:9000/query/xgraph_tigergraph/entity_resolution_cpu'. Add -H \"Authorization: Bearer TOKEN\" if authentication is enabled.\n",
+      "entity_resolution_retres_alveo query: curl -X GET 'http://127.0.0.1:9000/query/xgraph_tigergraph/entity_resolution_retres_alveo'. Add -H \"Authorization: Bearer TOKEN\" if authentication is enabled.\n",
       "\n"
      ]
     }
@@ -339,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -348,14 +351,14 @@
      "text": [
       "Running Query on FPGA...\n",
       "ComputationTechnique : Xilinx Alveo device\n",
-      "PeakVirtualMemoryInGB : 2.87253\n",
-      "PeakResidentMemoryInGB : 0.4012\n",
+      "PeakVirtualMemoryInGB : 2.95938\n",
+      "PeakResidentMemoryInGB : 0.44117\n",
       "RefNamesSize : 842\n",
       "TargetPersonsSize : 259\n",
-      "MatchExecTimeInMs : 2\n",
-      "AvergeTimePerPersonInMs : 0.00772\n",
+      "MatchExecTimeInMs : 3\n",
+      "AvergeTimePerPersonInMs : 0.01158\n",
       "\n",
-      "Round Trip time: 69.09 msec\n"
+      "Round Trip time: 51.88 msec\n"
      ]
     }
    ],
@@ -380,6 +383,42 @@
     "Feel free to play with the query!\n",
     "\n",
     "#### Thanks for your time!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running Query on CPU...\n",
+      "ComputationTechnique : TigerGraph CPU\n",
+      "PeakVirtualMemoryInGB : 2.98001\n",
+      "PeakResidentMemoryInGB : 0.48928\n",
+      "ExecTimeInMs : 63\n",
+      "RefNamesSize : 842\n",
+      "TargetPersonsSize : 259\n",
+      "AvergeTimePerPersonInMs : 0.24324\n",
+      "\n",
+      "Round Trip time: 97.48 msec\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Running Query on CPU...')\n",
+    "\n",
+    "tStart = time.perf_counter()\n",
+    "result = conn.runInstalledQuery('entity_resolution_cpu', timeout=240000000)\n",
+    "tDuration = 1000*(time.perf_counter() - tStart)\n",
+    "\n",
+    "for res in result:\n",
+    "    for k in res:\n",
+    "        print(k,\":\", res[k])\n",
+    "\n",
+    "print(f\"\\nRound Trip time: {tDuration:.2f} msec\")"
    ]
   },
   {
