Added correct versions of U55 deployment package

--- a/plugin/tigergraph/mis/examples/travelplan/jupyter/travelplan-jupyter-tg.ipynb
+++ b/plugin/tigergraph/mis/examples/travelplan/jupyter/travelplan-jupyter-tg.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
       "Kick off job job_schema_change_local\n",
       "\n",
       "Graph xgraph_tigergraph update to new version 1\n",
-      "The job job_schema_change_local completes in 10.632 seconds!\n",
+      "The job job_schema_change_local completes in 8.486 seconds!\n",
       "The job job_schema_change_local is dropped!\n"
      ]
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -242,12 +242,12 @@
       "[Tip: Use \"CTRL + C\" to stop displaying the loading status update, then use \"SHOW LOADING STATUS jobid\" to track the loading progress again]\n",
       "[Tip: Manage loading jobs with \"ABORT/RESUME LOADING JOB jobid\"]\n",
       "Starting the following job, i.e.\n",
-      "JobName: load_xgraph, jobid: xgraph_tigergraph.load_xgraph.file.m1.1643956970716\n",
-      "Loading log: '/home2/tigergraph/tigergraph/log/restpp/restpp_loader_logs/xgraph_tigergraph/xgraph_tigergraph.load_xgraph.file.m1.1643956970716.log'\n",
+      "JobName: load_xgraph, jobid: xgraph_tigergraph.load_xgraph.file.m1.1644603612042\n",
+      "Loading log: '/home2/tigergraph/tigergraph/log/restpp/restpp_loader_logs/xgraph_tigergraph/xgraph_tigergraph.load_xgraph.file.m1.1644603612042.log'\n",
       "\n",
-      "Job \"xgraph_tigergraph.load_xgraph.file.m1.1643956970716\" loading status\n",
-      "[RUNNING] m1 ( Finished: 0 / Total: 2 )\n",
-      "Job \"xgraph_tigergraph.load_xgraph.file.m1.1643956970716\" loading status\n",
+      "Job \"xgraph_tigergraph.load_xgraph.file.m1.1644603612042\" loading status\n",
+      "[WAITING] m1 ( Finished: 0 / Total: 0 )\n",
+      "Job \"xgraph_tigergraph.load_xgraph.file.m1.1644603612042\" loading status\n",
       "[FINISHED] m1 ( Finished: 2 / Total: 2 )\n",
       "[LOADED]\n",
       "+--------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,9 @@
       "build_csr query: curl -X GET 'http://127.0.0.1:9000/query/xgraph_tigergraph/build_csr'. Add -H \"Authorization: Bearer TOKEN\" if authentication is enabled.\n",
       "assign_ids query: curl -X GET 'http://127.0.0.1:9000/query/xgraph_tigergraph/assign_ids'. Add -H \"Authorization: Bearer TOKEN\" if authentication is enabled.\n",
       "maximal_indep_set_alveo query: curl -X GET 'http://127.0.0.1:9000/query/xgraph_tigergraph/maximal_indep_set_alveo'. Add -H \"Authorization: Bearer TOKEN\" if authentication is enabled.\n",
-      "\n"
+      "\n",
+      "\n",
+      "--------- All queries installed ----------\n"
      ]
     }
    ],
@@ -347,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +357,7 @@
      "output_type": "stream",
      "text": [
       "Building edges for travelplan vertices...\n",
-      "completed in 0.0773 sec\n"
+      "completed in 0.0911 sec\n"
      ]
     }
    ],
@@ -380,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -388,13 +390,13 @@
      "output_type": "stream",
      "text": [
       "Running Queries on FPGA...\n",
-      "ExecTimeInMs : 223.18157\n",
+      "ExecTimeInMs : 237.24374\n",
       "ComputationTechnique : Xilinx Alveo device\n",
-      "PeakVirtualMemoryInGB : 2.65854\n",
-      "PeakResidentMemoryInGB : 0.19234\n",
-      "MisSize : 414\n",
+      "PeakVirtualMemoryInGB : 2.65602\n",
+      "PeakResidentMemoryInGB : 0.22663\n",
+      "MisSize : 111\n",
       "\n",
-      "Round Trip time: 234.01 msec\n"
+      "Round Trip time: 251.95 msec\n"
      ]
     }
    ],
