Updated MIS TG Notebook

--- a/plugin/tigergraph/mis/examples/travelplan/jupyter/travelplan-jupyter-tg.ipynb
+++ b/plugin/tigergraph/mis/examples/travelplan/jupyter/travelplan-jupyter-tg.ipynb
@@ -398,7 +398,7 @@
    "outputs": [],
    "source": [
     "print('Assign unique IDs to Travel Plan vertices\\n'+'-'*41)\n",
-    "result = conn.runInstalledQuery('assign_ids', {'v_type': \"travel_plan\", 'e_type': \"tp2tp\"}, timeout=240000000)\n",
+    "result = conn.runInstalledQuery('assign_ids', {'v_type': \"travel_plan\"}, timeout=240000000)\n",
     "for res in result:\n",
     "    for k in res:\n",
     "            print(k, \":\", res[k])\n",
