Corrected paths in MIS TG Jupyter notebook

--- a/plugin/tigergraph/mis/examples/travelplan/jupyter/travelplan-jupyter-tg.ipynb
+++ b/plugin/tigergraph/mis/examples/travelplan/jupyter/travelplan-jupyter-tg.ipynb
@@ -121,8 +121,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "localRepoLocation = Path(\"/proj/gdba/sachink/ghe/ga_2\")\n",
-    "exampleLocation = Path(\"graphanalytics/plugin/tigergraph/mis/examples/travelplan/\") # when running from github repo\n",
+    "localRepoLocation = Path(\"/opt/xilinx/apps\")\n",
+    "# NOTE: when running from installed area, modify following path according to the mis version installed (1.0)\n",
+    "exampleLocation = Path(\"graphanalytics/integration/Tigergraph-3.x/mis/1.0/examples/travelplan/\")\n",
     "queryFileLocation = localRepoLocation / exampleLocation / \"query\""
    ]
   },
@@ -139,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serverRepoLocation = PurePosixPath(\"/proj/gdba/sachink/ghe/ga_2\")\n",
+    "serverRepoLocation = PurePosixPath(\"/opt/xilinx/apps\")\n",
     "serverDataLocation = serverRepoLocation / PurePosixPath(exampleLocation) / \"data\"\n",
     "tp2woInfile = serverDataLocation / \"travelplan2workorders100.csv\"\n",
     "tp2trInfile = serverDataLocation / \"travelplan2trucks100.csv\""
